[package]
name = "gfd"
version = "0.2.0"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
description = "Read and write GFD shader binaries."
repository = "https://github.com/rust-wiiu/gfd"
documentation = "https://github.com/rust-wiiu/gfd"
publish = false

[dependencies]
binrw = { version = "0.15.1", default-features = false }
bitflags = { version = "2.13.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.149"
