[package]
name = "gfx2"
version = "0.3.1"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
description = "Parse Gfx2 shader binaries."
repository = "https://github.com/rust-wiiu/gfx2"
keywords = ["nintendo", "homebrew", "wiiu"]
include = ["Cargo.toml", "Cargo.lock", "LICENSE*", "README*", "src/**/*"]

[dependencies]
binrw = { version = "0.15.1", default-features = false }
bitflags = { version = "2.13.0", default-features = false, features = [
    "serde",
] }
serde = { version = "1.0.228", features = ["derive", "alloc"] }
serde-big-array = "0.5.1"
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
serde_json = "1.0.150"

[package.metadata.release]
publish = false
push = true
